--- a/1-color-flipper/style.css
+++ b/1-color-flipper/style.css
@@ -101,6 +101,17 @@ nav {
   width: 8rem;
 }
 
+.navbar__link {
+  padding: 0.25rem 0.5rem;
+  border: 2px solid transparent;
+  border-radius: 0.4rem;
+  transition: var(--transition);
+}
+
+.navbar__link:hover {
+  border-color: #49a6e9;
+}
+
 /* 
 ============
 Main
